joboutput_992994.err
Traceback (most recent call last):
  File "raw.py", line 7, in <module>
    import numpy as np
  File "/local/java/python-ml/22-12-21-python3.9/lib64/python3.9/site-packages/numpy/__init__.py", line 130
    raise ImportError(msg) from e
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "cifar100.py", line 9, in <module>
    import torch
  File "/local/java/python-ml/22-12-21-python3.9/lib64/python3.9/site-packages/torch/__init__.py", line 107
    err.strerror += f' Error adding "{dll_path}" to the DLL directories.'
                                                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "main.py", line 15, in <module>
    import numpy as np
  File "/local/java/python-ml/22-12-21-python3.9/lib64/python3.9/site-packages/numpy/__init__.py", line 130
    raise ImportError(msg) from e
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "plot_results.py", line 7, in <module>
    import matplotlib as mpl
  File "/local/java/python-ml/22-12-21-python3.9/lib64/python3.9/site-packages/matplotlib/__init__.py", line 84
SyntaxError: Non-ASCII character '\xc2' in file /local/java/python-ml/22-12-21-python3.9/lib64/python3.9/site-packages/matplotlib/__init__.py on line 85, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details
